# roon-extension-spotify

./: .gitignore  LICENSE  README.md  index.js  package-lock.json  package.json  transport.js
node-librespot/: Cargo.toml  index.js  package-lock.json  package.json
node-librespot/src/: decrypt.rs  devices.rs  lib.rs  metadata.rs  player.rs  server.rs  spirc.rs  zone.rs
node-librespot/src/playerinternal/: handle_player_command.rs  handle_roon_message.rs  handle_server_message.rs  mod.rs
