[package]
name = "librespot"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
tokio-stream = "0.1.1"
form_urlencoded = "1.0"
protobuf = "2.14.0"
rand = "0.8"
aes-ctr = "0.6"
futures = "0.3.21"
futures-executor = "0.3"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default_features = false, features = ["alloc"] }
serde = "1.0.140"
serde_json = "1.0.82"
env_logger =  {version = "0.9", default-features = false, features = ["termcolor","humantime","atty"]}
simplelog = "^0.12.0"
#librespot = "0.4.1"
#librespot = { path = "../../librespot" }
librespot = { git = "https://github.com/johnnyslush/librespot.git", branch = "roon-extension-spotify" }
log = ">=0.4.13, <0.4.14"
hex = "0.4"
sha-1 = "0.9"
tokio = { version = "1", features = ["full"] }
byteorder = "1.4"

http-range = "0.1.4"
actix-web = "4"
actix-files = "0.6.1"
actix-http-test = "3.0.0"



[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]

